Correcion de eliminacion de alumnos